@@ -13,6 +13,7 @@
         <skip.unit.tests>false</skip.unit.tests>
         <skip.integration.tests>false</skip.integration.tests>
         <tinkar-composer.version>1.12.0</tinkar-composer.version>
+        <failsafeArgLine>--enable-preview</failsafeArgLine>
     </properties>
 
     <dependencyManagement>
